[project]
name = "obsidian-to-hugo-publish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "textual>=6.6.0",
    "rich>=14.2.0",
    "psutil>=7.1.3",
]

[project.scripts]
obsidian-to-hugo = "main:main"
